chages related to simple CRUD operations....

--- a/src/practo/Bundle/BlogBundle/Resources/views/Blog/create.html.twig
+++ b/src/practo/Bundle/BlogBundle/Resources/views/Blog/create.html.twig
@@ -1,4 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-User Create Form Hello Worldiii!
+{{ form_start(form) }}
+{{ form_widget(form) }}
+{{ form_end(form) }}
 {% endblock %}
